@@ -25,5 +25,6 @@ date    by    file                   comment
 16jun14 svn   trx_testcases.sh       added log file capability
 16jun15 svn   trx2txt.sh             parameter handling changed completly ("-r", "-t")
 16jun15 svn   trx2txt.sh             add feature to load data from www.blockchain.info
-16jun14 svn   trx_testcases.sh       added checksum results into output
+16jun15 svn   trx_testcases.sh       added checksum results into output
+16jun16 svn   trx2txt.sh             fixed network verification for LINUX
 
